--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,4 @@
-Media Feeds 7.0-1.0, 2011-05-27
--------------------------------
-Initial release
+Media Feeds 1.0 Beta 1
+======================
+
+Initial release that came through the project application review process.
